--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -249,6 +249,9 @@
 <!-- NLP - C-->    
     <a href="" target="_blank">NLPCC</a>
     |
+<!-- data mining - C-->  
+    <a href="#" target="_blank">ADMA</a>
+    |
 <!-- Neural network - C--> 
     <a href="http://www.iconip2023.org/index.html" target="_blank">ICONIP</a>
     |
@@ -314,7 +317,9 @@
     <a href="https://mp.weixin.qq.com/s/kepm89fMdy4ALKsuMHq-lw" target="_blank">回顾2022，那些令人印象深刻的AI突破</a>
     |
     <a href="https://zhuanlan.zhihu.com/p/596730259?utm_campaign=shareopn&utm_medium=social&utm_oi=1057776824595087360&utm_psn=1594372411377549312&utm_source=wechat_session&s_r=0" target="_blank">吴恩达来信：2023人工智能热点展望</a>
-    |    
+    |
+    <a href="https://mp.weixin.qq.com/s/vDGkoLpGDB-kYDzjpSgmJg" target="_blank">微软研究院刘铁岩畅谈AI for Science ：追求人类智能最光辉的一面</a>
+    |     
 </br>
 </br>
 Code Understanding: 
@@ -477,7 +482,7 @@ Code Understanding:
     |
     <a href="#" target="_blank">ICBK</a>
     |
-    <a href="hhttps://adma2022.uqcloud.net/" target="_blank">ADMA</a>
+    <a href="https://adma2022.uqcloud.net/index.html" target="_blank">ADMA</a>
     |
     <a href="https://www.knowledgegraph.tech/kgc-2022-program/" target="_blank">KGC</a>
     |
