--- a/pages/index.html
+++ b/pages/index.html
@@ -59,7 +59,7 @@
 <div class="container">
 
 <p>
-<img width="300" src="./" align="right" alt="this is me">
+<img width="200" high="330" src="./img/profile.jpg" align="right" alt="this is me">
 </p><h2>Yongpan Sheng (盛泳潘 in Chinese)</h2>
 School of Big Data and Software Engineering<br/>
 Chongqing University<br/> 
@@ -87,17 +87,17 @@ Email: shengyp2011(at){gmail,163}(dot)com<br>
 <!-- will join <a href="http://cis.swu.edu.cn/" target="_blank">College of Computer and Information Science, Software</a>, Southwest University (<a href="http://www.swu.edu.cn/" target="_blank">SU</a>) for the position of lecturer. Prior to that, he was  , from Sep. 2020 to Mar. 2022. --> 
 
 <!-- Before that -->
-Yongpan Sheng currently is a Research Assistant at <a href="http://www.cse.cqu.edu.cn/" target="_blank">School of Big Data and Software Engineering</a>, Chongqing University (<a href="https://www.cqu.edu.cn/" target="_blank">CQU</a>). In educationally, he obtained his Ph.D. degree in Computer Architecture from the <a href="http://www.scse.uestc.edu.cn/" target="_blank">School of Computer Science and Engineering</a>, University of Electronic Science and Technology of China (<a href="https://www.uestc.edu.cn/" target="_blank">UESTC</a>) on Auguest 2020, under the supervisor of Prof. <a href="https://scholar.google.com/citations?hl=en&user=gF0H9nEAAAAJ" target="_blank"> Zenglin Xu</a>. Before that, he received his Bachelor's Degree in Network Engineering from Chengdu University of Information Technology (<a href="https://www.cuit.edu.cn/" target="_blank">CUIT</a>), and Master's Degree in Software Engineering from University of Electronic Science and Technology of China (<a href="https://www.uestc.edu.cn/" target="_blank">UESTC</a>) in 2011 and 2014, respectively. He joined the Research Practicum Program of University of New South Wales (<a href="https://www.unsw.edu.au/" target="_blank">UNSW</a>), as a joint training Ph.D. candidate working with Prof. <a href="http://home.cse.ust.hk/~weiwcs/" target="_blank">Wei Wang</a> from Oct. 2017 to Oct. 2018.<br></p>
+Yongpan Sheng currently is a lecturer in <a href="http://cis.swu.edu.cn/" target="_blank">College of Computer and Information Science</a>, Southwest University (<a href="http://www.swu.edu.cn/" target="_blank">SU</a>). Prior to that, he was a Research Assistant at <a href="http://www.cse.cqu.edu.cn/" target="_blank">School of Big Data and Software Engineering</a>, Chongqing University (<a href="https://www.cqu.edu.cn/" target="_blank">CQU</a>) from Sep. 2020 to Jan. 2023. In educationally, he obtained his Ph.D. degree in Computer Architecture from the <a href="http://www.scse.uestc.edu.cn/" target="_blank">School of Computer Science and Engineering</a>, University of Electronic Science and Technology of China (<a href="https://www.uestc.edu.cn/" target="_blank">UESTC</a>) on Aug. 2020, under the supervisor of Prof. <a href="https://scholar.google.com/citations?hl=en&user=gF0H9nEAAAAJ" target="_blank"> Zenglin Xu</a>. Before that, he received his Bachelor's Degree in Network Engineering from Chengdu University of Information Technology (<a href="https://www.cuit.edu.cn/" target="_blank">CUIT</a>), and Master's Degree in Software Engineering from University of Electronic Science and Technology of China (<a href="https://www.uestc.edu.cn/" target="_blank">UESTC</a>) in 2011 and 2014, respectively. During his Ph.D. degree pursuing, he joined the Research Practicum Program of University of New South Wales (<a href="https://www.unsw.edu.au/" target="_blank">UNSW</a>), as a joint training Ph.D. candidate working with Prof. <a href="https://www.cse.ust.hk/~weiwcs/" target="_blank">Wei Wang</a> from Oct. 2017 to Oct. 2018.<br></p>
 
 <!-- Before joining UNSW in 2017, I worked as a Research Assistant at <a href="https://www.ubc.ca/">The University of British Columnbia, Canada</a> and a Digital Integerated Circuit Design Engineer at <a href="http://www.spreadtrum.com/en/index.html">Spreadtrum Communications, Inc, China</a>, respectively during 2015-2017. -->
 
 <p>
 <!-- Knowledge Extraction and Structured Embeddings from Unstructured Data -->
-Sheng's interest lies in <b>Textual Data Mining</b>, <b>Representation Learning for Knowledge Graphs</b>, and <b>Domain-Specific Knowledge Graph Construction</b>. He has worked on a variety of related tasks including knowledge mining based upon open-domain extraction, domain-specific knowledge graph construction from semi-structured and unstructured data, representation learning for temporal knowledge graphs. His recent work also includes a series of novel and effective algorithms developed for open-domain knowledge extraction from texts, and representation learning for graph neural networks.  
+Sheng's interest lies in <b>textual data mining</b>, <b>representation learning for knowledge graphs</b>, <b>domain-specific knowledge graph construction</b>, and <b> code understanding and representation</b>. He has worked on a variety of related tasks including knowledge mining based upon open-domain extraction, domain-specific knowledge graph construction from semi-structured and unstructured data, representation learning for temporal knowledge graphs. His recent work also includes a series of novel and effective algorithms developed for open-domain knowledge extraction from texts, and representation learning for graph neural networks.  
 <br></p>
 
 <p>
-Sheng has published more than 20 papers in major international conferences including IJCAI, ECML-PKDD, APWeb-WAIM, and journals like Information Sciences, WWW Journal, Cognitive Computation, Applied Intelligence. He has served as a PC member for many venues such as ECML-PKDD (22), ICONIP (22), APWeb-WAIM (20/21/22), CCKS (22), ADMA (22), ICISC (23), and a reviewer for venues such as APWeb-WAIM (19/20/21/22), ICONIP (22), CCKS (22), ADMA (22), ICISC (23), RSBD (19), CCF-ICAI (18), AAAI (16), CCKS (16), CCPR (16) as well as journals such as Knowledge-Based Systems, Pattern Recognition Letters, IEEE Access, Journal of Computer Research and Development, Acta Electronica Sinica, etc.
+Sheng has published more than 20 papers in major international conferences including IJCAI, ECML-PKDD, APWeb-WAIM, and journals like Information Sciences, WWW Journal, Cognitive Computation, Applied Intelligence. He has served as a PC member for many venues such as ECML-PKDD (22), ICONIP (22), APWeb-WAIM (20/21), CCKS (22), CCL (22), ADMA (22), DaMi (22), ICISC (23), and a reviewer for venues such as ECML-PKDD (22), DASFAA (23), GDMA (23), ICONIP (22), APWeb-WAIM (19/20/21/22), CCKS (22), CCL (22), ADMA (22), DaMi (22), ICISC (23), RSBD (19), CCF-ICAI (18), AAAI (16), CCKS (16), CCPR (16) as well as journals such as CAAI Transactions on Intelligence Technology, Knowledge-Based Systems, Pattern Recognition Letters, Applied Sciences, Entropy, IEEE Access, Data and Information Management, Journal of Computer Research and Development, Acta Electronica Sinica, etc.
 <br></p>
 
 Check out Sheng's up-to-date CV for more details.
@@ -106,6 +106,9 @@ Check out Sheng's up-to-date CV for more details.
 
 <h3>Recent News</h3>
 <ul>
+    <li style="text-align:justify">
+      [2022/08/03]&nbsp;&nbsp; <font color="#FF0000">CALL FOR PAPER: We are organizing a <a href="https://www.mdpi.com/journal/entropy/special_issues/82WTZCNLE4" target="_blank">special issue (opens the new window)</a> on Information Network Mining and Applications in the Entropy Journal. Welcome your submission.</font>
+    </li>
     <li style="text-align:justify">
       [2020/07/16]&nbsp;&nbsp; I successfully defended my dissertation entitled "Research and Application of Learning Methods for Knowledge Graphs" and will ready to move on a new start.
     </li>
@@ -160,6 +163,12 @@ Check out Sheng's up-to-date CV for more details.
   <br />
   <a href="https://www.ccf.org.cn/xspj/rjgc/xtrj/cxsjyy/" target="_blank">CCF推荐排名</a>
 <!--  <br /> -->
+  |
+  <a href="https://mp.weixin.qq.com/s/HHKK3Gibxafv_OFsGXpBaQ" target="_blank">2022年分区表 | 大小类设置和期刊调整</a>
+  |
+  <a href="https://www.ccf.org.cn/Academic_Evaluation/By_category/" target="_blank">中国计算机学会推荐国际学术会议和期刊目录-2022 (拟定)</a>
+  |
+  <a href="https://www.cie.org.cn/list_43/11070.html" target="_blank">中国电子学会关于《电子技术、通信技术领域高质量科技期刊分级目录（征求意见稿）》和《计算机技术领域高质量科技期刊分级目录（征求意见稿）》的公示</a>
   |
   <a href="https://www.ccf.org.cn/c/2019-04-25/663625.shtml" target="_blank">中国计算机学会推荐国际学术会议和期刊目录 (2019年发布)</a>
 <!--  <br /> -->
