--- a/pages/publications.html
+++ b/pages/publications.html
@@ -77,29 +77,38 @@
     <br />
     "(SELECTED)" refers to the representative works of my primary research direction but not necessarily the best works! )
 
+<!-- 2023 year -->
+<h4>2023</h4>
+<ol start="1">
+    <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>, <strong><font color= "#00066f">A syntactic-based model for open relation extraction</font></strong></a>. Computer Science (<a href="http://www.jsjkx.com/CN/1002-137X/home.shtml"><strong><u><font color="#874e26">Computer Science</font></u></strong></a>). (In Chinese) (To be Submitted)</li>
+
+    <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>, Chunyan Liu, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, and <a href="http://www.cse.cqu.edu.cn/info/2096/4505.htm" target="_blank">Yan Lei</a>*, <strong><font color= "#00066f">A Systematical Study on Dynamic Fault Localization for Machine Learning Methods</font></strong></a>. (To be Submitted)</li>
+
+</ol>
+
 
 <!-- 2022 year -->
 <h4>2022</h4>
 <ol start="1">
-    <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>, <strong><font color= "#00066f">A syntactic-based model for open relation extraction</font></strong></a>. Computer Science (<a href="http://www.jsjkx.com/CN/1002-137X/home.shtml"><strong><u><font color="#874e26">Computer Science</font></u></strong></a>). (In Chinese) (To be Submitted)</li>
-    
+    <!-- <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>, <strong><font color= "#00066f">A syntactic-based model for open relation extraction</font></strong></a>. Computer Science (<a href="http://www.jsjkx.com/CN/1002-137X/home.shtml"><strong><u><font color="#874e26">Computer Science</font></u></strong></a>). (In Chinese) (To be Submitted)</li> -->
+ 
+    <li> <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, and Wenjie Li, <a href="#"><strong><font color= "#00066f">A Short Survey on Deep Learning-Based Open Relation Extraction: Recent Advances, Resources and Perspective</font></strong></a>. (Under Review)</li>
 
 
-<!--     <li> <strong><a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <font color="#0076ff">Yongpan Sheng</font></strong>*, <a href="https://dblp.uni-trier.de/pers/hd/z/Zhang:Hekai" target="_blank">Hekai Zhang</a>, and <a href="http://www.cse.cqu.edu.cn/info/2097/5778.htm" target="_blank">Meng Chen</a>, <a href="#"><strong><font color= "#00066f">Semantic-Path Guided Graph Neural Network for Heterogeneous Graph Embedding</font></strong></a>. (Under Review)</li> -->
-<!-- The 25th Pacific-Asia Conference on Knowledge Discovery and Data Mining (<a href="https://pakdd2021.org/"><strong><u><font color="#874e26">PAKDD-21</font></u></strong></a>). Delhi, India, May 11-14 2021 (To be Submitted)</li> 
- -->
+    <li> <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, <a href="https://dblp.uni-trier.de/pers/hd/z/Zhang:Hekai" target="_blank">Hekai Zhang</a>, <a href="http://www.cse.cqu.edu.cn/info/2097/5778.htm" target="_blank">Meng Chen</a>, and <a href="https://cqcam.cqnu.edu.cn/info/2008/3152.htm" target="_blank">Jiatian Pi</a>, <a href="#"><strong><font color= "#00066f">Semantic-Path Guided Graph Neural Network for Heterogeneous Graph Embedding</font></strong></a>. Mathmetics (<a href="https://www.mdpi.com/journal/mathematics"><strong><u><font color="#874e26">Mathmetics</font></u></strong></a>). (Minor for Accepted)</li>
+
+
+    <li>Hao Zhou, Zekai Chen, Yun Liu, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, Wenqi Ren, and Hailing Xiong, <a href="#"><strong><font color= "#00066f"> Physical Priors Guided DehazeFormer</font></strong></a>. Knowledge-Based Systems (<a href="https://www.journals.elsevier.com/knowledge-based-systems"><strong><u><font color="#874e26">KBS</font></u></strong></a>). (IF = 8.038, CCF-C, JCR Q1, 中科院 Q1)</li>
+
+
+    <li>Chunyan Liu, <a href="http://www.cse.cqu.edu.cn/info/2096/4505.htm" target="_blank">Yan Lei</a>, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="http://www.cse.cqu.edu.cn/info/2095/5040.htm" target="_blank">Meng Yan</a>, Xiaoguang Mao, and <a href="http://www.cse.cqu.edu.cn/info/2097/5325.htm" target="_blank">Zhou Xu</a>, <a href="#"><strong><font color= "#00066f">Review on Dynamic Fault Localization Methods Based on Machine Learning</font></strong></a>. (Under Review)</li>
+
 </ol>
 
 
 <!-- 2021 year -->
 <h4>2021</h4>
 <ol start="1">
-
-    <li> <strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="https://cfm.uestc.edu.cn/~shaojie/" target="_blank">Jie Shao</a>, and <a href="https://wilburone.github.io/index.html" target="_blank">Fuli Huang</a>*, <a href="#"><strong><font color= "#00066f">A Short Survey on Open Relation Extraction from Text Corpora: Recent Advances, Resources and Perspective</font></strong></a>. (Under Review)</li>
-<!-- The 25th Pacific-Asia Conference on Knowledge Discovery and Data Mining (<a href="https://pakdd2021.org/"><strong><u><font color="#874e26">PAKDD-21</font></u></strong></a>). Delhi, India, May 11-14 2021 (Under Review)</li> 
- -->
-
-
     <li> <strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="#"><strong><font color= "#00066f">Incorporating Contextualized Definition into Term-Pair Representations for Enhanced Hypernym-hyponym Relation Identification</font></strong></a>. (Under Review)</li>
 
 
@@ -107,15 +116,10 @@
 
 <!-- The 25th Pacific-Asia Conference on Knowledge Discovery and Data Mining (<a href="https://pakdd2021.org/"><strong><u><font color="#874e26">PAKDD-21</font></u></strong></a>). Delhi, India, May 11-14 2021 (To be Submitted)</li>  -->
 
-
-    <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>, Chunyan Liu, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, and <a href="http://www.cse.cqu.edu.cn/info/2096/4505.htm" target="_blank">Yan Lei</a>*, <strong><font color= "#00066f">A Systematical Study on Dynamic Fault Localization for Machine Learning Methods</font></strong></a>. (To be Submitted)</li>
-
-
 <!--     <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="#"><strong><font color= "#00066f">An Extraction and Verification Framework for Harvesting Temporal Knowledge Graph from News Articles</font></strong></a>. (To be Submitted)</li> -->
 
 
     <li>Peng Zhao, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, Xiaohui Zhan*, <a href="https://ieeexplore.ieee.org/document/9828919"><strong><font color= "#00066f">An advanced NMF-based approach for single cell data clustering</font></strong></a>. The 2022 2nd International Conference on Information Communication and Software Engineerin (<a href="http://www.icse.org/index.html"><strong><u><font color="#874e26">ICICSE-22</font></u></strong></a>). Chongqing, China, March 18-20 2022 (EI Indexed)</li>
-
 
 
     <li>Jiasheng Zhang, Shuang Liang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, and <a href="http://cfm.uestc.edu.cn/~shaojie/" target="_blank">Jie Shao</a>*, <a href="https://www.sciencedirect.com/science/article/pii/S0950705122006141"><strong><font color= "#00066f"> Temporal knowledge graph representation learning with local and global evolutions</font></strong></a>. Knowledge-Based Systems (<a href="https://www.journals.elsevier.com/knowledge-based-systems"><strong><u><font color="#874e26">KBS</font></u></strong></a>). (IF = 8.038, CCF-C, JCR Q1, 中科院 Q1)</li>
@@ -124,9 +128,6 @@
 
     <li><a href="http://www.cse.cqu.edu.cn/info/2097/5778.htm" target="_blank">Meng Chen</a>, Jiaxin Hou, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="http://www.cse.cqu.edu.cn/info/2095/4456.htm" target="_blank">Yingbo Wu</a>, <a href="http://www.cse.cqu.edu.cn/info/2097/3519.htm" target="_blank">Qilin Fan</a>, <a href="http://www.cse.cqu.edu.cn/info/2096/3500.htm" target="_blank">Sen Wang</a>, and Junpeng Cai, <a href="#"><strong><font color= "#00066f"> Embedding Virtual Private Cloud in Hierarchical Data Centers by Reinforcement Learning</font></strong></a>. (Under Review)</li> 
 
-
-
-    <li>Chunyan Liu, <a href="http://www.cse.cqu.edu.cn/info/2096/4505.htm" target="_blank">Yan Lei</a>, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="http://www.cse.cqu.edu.cn/info/2095/5040.htm" target="_blank">Meng Yan</a>, Xiaoguang Mao, and <a href="http://www.cse.cqu.edu.cn/info/2097/5325.htm" target="_blank">Zhou Xu</a>, <a href="#"><strong><font color= "#00066f">Review on Dynamic Fault Localization Methods Based on Machine Learning</font></strong></a>. (Under Review)</li>
 
 <!--     <li> <strong><font color="#0076ff">Yongpan Sheng</font></strong><sup>#</sup>, Jiasheng Zhang<sup>#</sup>, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, Xiaohong Zhang, and <a href="http://cfm.uestc.edu.cn/~shaojie/" target="_blank">Jie Shao</a>, <a href="#"><strong><font color= "#00066f"> TKBData: A Large-Scale Temporal Knowledge Base Dataset with Evaluation on State-of-the-Art Tasks</font></strong></a>.
 The 28th International Conference on Computational Linguistics (<a href="https://coling2020.org/"><strong><u><font color="#874e26">COLING-20</font></u></strong></a>). Barcelona, Spain, December 8-11 2019 (CCF: B) (To be Submitted)</li>  -->
