--- a/pages/publications.html
+++ b/pages/publications.html
@@ -87,6 +87,7 @@
 
 
 <!-- 2023 year -->
+<hr align="left" width="100%">
 <h4>2023</h4>
 <ol start="1">
     <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>, <strong><font color= "#00066f">A syntactic-based model for open relation extraction</font></strong></a>. Computer Science (<a href="http://www.jsjkx.com/CN/1002-137X/home.shtml"><strong><u><font color="#874e26">Computer Science</font></u></strong></a>). (In Chinese) (To be Submitted)</li>
@@ -97,6 +98,7 @@
 
 
 <!-- 2022 year -->
+<hr align="left" width="100%">
 <h4>2022</h4>
 <ol start="1">
     <!-- <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>, <strong><font color= "#00066f">A syntactic-based model for open relation extraction</font></strong></a>. Computer Science (<a href="http://www.jsjkx.com/CN/1002-137X/home.shtml"><strong><u><font color="#874e26">Computer Science</font></u></strong></a>). (In Chinese) (To be Submitted)</li> -->
@@ -116,6 +118,7 @@
 
 
 <!-- 2021 year -->
+<hr align="left" width="100%">
 <h4>2021</h4>
 <ol start="1">
     <li> <strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="#"><strong><font color= "#00066f">Incorporating Contextualized Definition into Term-Pair Representations for Enhanced Hypernym-hyponym Relation Identification</font></strong></a>. (Under Review)</li>
@@ -145,7 +148,6 @@ The 28th International Conference on Computational Linguistics (<a href="https:/
 
 <!-- 2020 year -->
 <hr align="left" width="100%">
-<!-- 2020 year -->
 <h4>2020</h4>
 <ol start="1">
    <li>Jiasheng Zhang, <strong><font color="#0076ff">Yongpan Sheng</font></strong>*, Zheng Wang, and <a href="http://cfm.uestc.edu.cn/~shaojie/" target="_blank">Jie Shao</a>, <a href="https://link.springer.com/content/pdf/10.1007%2F978-3-030-60259-8_16.pdf"><strong><font color= "#00066f">TKGFrame: A Two-Phase Framework for Temporal-Aware Knowledge Graph Completion</font></strong></a>. The 4th Asia Pacific Web and Web-Age Information Management Joint Conference on Web and Big Data (<a href="http://www.tjudb.cn/apwebwaim2020/"><strong><u><font color="#874e26">APWeb-WAIM-20</font></u></strong></a>). Tianjin, China, August 12-14 2020 (CCF-C)</li>
