--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -147,6 +147,9 @@
     <li><strong><font color="#874e26"><a href="https://www.pinecone.io/learn/nlp">Natural Language Processing (NLP) for Semantic Search [<a href="https://mp.weixin.qq.com/s/6hFUQ9Z3G5nRjJGBenfX8Q" target="_blank">Report</a>]</a></font></strong></li>
 
 
+    <li><strong><font color="#874e26"><a href="https://pan.baidu.com/s/1ljKPX1daK2pFfA-aDCggGQ?pwd=p8gy">Text Mining with Machine Learning [<a href="https://mp.weixin.qq.com/s/Fa1XTrGtbpJY295Np36b2Q" target="_blank">Report</a>]</a></font></strong></li>
+
+
     <li><strong><font color="#874e26"><a href="#">知识图谱: 概念与技术</a><a href="https://mp.weixin.qq.com/s/eiHhq8B0cc5XDirD9pszyA" target="_blank">  [第一章 (<a href="http://kw.fudan.edu.cn/resources/ppt/kgbook/Ch01-1.pdf" target="_blank">Part I</a>, <a href="http://kw.fudan.edu.cn/resources/ppt/kgbook/Ch01-2.pdf" target="_blank">II</a>, <a href="http://kw.fudan.edu.cn/resources/ppt/kgbook/Ch01-3.pdf" target="_blank">III</a>)]</a></font></strong></li>
 
 
