--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -298,6 +298,9 @@
     |
     <a href="#" target="_blank">ChineseCSCW</a>
     |
+<!--  -->
+    <a href="http://www.prai.net/" target="_blank">PRAI</a>
+    |
     <br/>
     <a href="https://mp.weixin.qq.com/s/uQubfUy7pGMLeCQKgqB6Bw" target="_blank">Gartner发布：2023年十大重要技术趋势</a>
     |
@@ -2117,6 +2120,9 @@ Database Field：
 Recommender System Field：
 <br />
     <a href="https://zhaoxyai.github.io/" target="_blank">Xiangyu Zhao</a>
+    |
+<!-- University of Technology Sydney -->
+    <a href="https://shoujinwang1.github.io/" target="_blank">Shoujin Wang</a>
     |      
   <br />
   <br />
@@ -2178,6 +2184,13 @@ Visual Analytics Field:
 <!-- HKUST, under supervision of Prof. Huamin Qu.  -->
     <a href="http://www.huamin.org/" target="_blank">Huamin Qu [<a href="http://vis.cse.ust.hk/" target="_blank">VisLab</a>] </a>
     |
+    <a href="https://zjinak.student.ust.hk/index.html" target="_blank">Zhihua Jin</a>
+    |
+    <a href="https://shellywhen.github.io/" target="_blank">Liwenhan Xie</a>
+    |
+    <a href="https://shuxinhuan.github.io/" target="_blank">Xinhuan Shu</a>
+    |
+<!--  -->
     <a href="http://www.cad.zju.edu.cn/home/chenwei/" target="_blank">Wei Chen</a>
     |
 <!-- Peking University -->
