--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -325,7 +325,11 @@
     <a href="https://zhuanlan.zhihu.com/p/596730259?utm_campaign=shareopn&utm_medium=social&utm_oi=1057776824595087360&utm_psn=1594372411377549312&utm_source=wechat_session&s_r=0" target="_blank">吴恩达来信：2023人工智能热点展望</a>
     |
     <a href="https://mp.weixin.qq.com/s/vDGkoLpGDB-kYDzjpSgmJg" target="_blank">微软研究院刘铁岩畅谈AI for Science ：追求人类智能最光辉的一面</a>
-    |     
+    |
+    <a href="https://mp.weixin.qq.com/s/qpA6vvktO_Lr2_bvwHBhug" target="_blank">《麻省理工科技评论》2023年“全球十大突破性技术”正式发布</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/74x7a5kdx5mcfebF8u8NSQ" target="_blank">上篇丨DeepTech发布《2023年生物医药技术趋势展望》研究报告——基础技术的突破不断引领生物医药创新前沿 </a>
+    |       
 </br>
 </br>
 Code Understanding: 
