--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -2127,6 +2127,9 @@ Recommender System Field：
     |
 <!-- University of Technology Sydney -->
     <a href="https://shoujinwang1.github.io/" target="_blank">Shoujin Wang</a>
+    |
+<!-- Shenzhen University -->
+    <a href="https://csse.szu.edu.cn/pages/user/index?id=1101" target="_blank">Junyang Chen</a>
     |      
   <br />
   <br />
