--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -302,6 +302,8 @@
     <a href="http://www.prai.net/" target="_blank">PRAI</a>
     |
     <br/>
+    <a href="https://mp.weixin.qq.com/s/XGdXuTeig3RlZJQRItQneQ" target="_blank">从EMNLP 2022速览信息检索领域最新研究进展</a>
+    |
     <a href="https://mp.weixin.qq.com/s/uQubfUy7pGMLeCQKgqB6Bw" target="_blank">Gartner发布：2023年十大重要技术趋势</a>
     |
     <a href="https://mp.weixin.qq.com/s/I6L6rBhCGLwoFKfS-dbD8A" target="_blank">清华青年最关注的改变未来十大变革科技</a>
@@ -329,7 +331,11 @@
     <a href="https://mp.weixin.qq.com/s/qpA6vvktO_Lr2_bvwHBhug" target="_blank">《麻省理工科技评论》2023年“全球十大突破性技术”正式发布</a>
     |
     <a href="https://mp.weixin.qq.com/s/74x7a5kdx5mcfebF8u8NSQ" target="_blank">上篇丨DeepTech发布《2023年生物医药技术趋势展望》研究报告——基础技术的突破不断引领生物医药创新前沿 </a>
-    |       
+    |
+    <a href="https://mp.weixin.qq.com/s/CkjTvqk--VN0csltgIUtNQ" target="_blank">9位院士12位专家联合撰文：智能计算的新进展、挑战与未来 | Science合作期刊</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/7oqVmYsNpn8OQlvl-UF-9g" target="_blank">《达摩院2023十大科技趋势》发布，生成式AI、多模态预训练大模型入选</a>
+    |              
 </br>
 </br>
 Code Understanding: 
