--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -334,7 +334,7 @@
     |
     <a href="https://mp.weixin.qq.com/s/CkjTvqk--VN0csltgIUtNQ" target="_blank">9位院士12位专家联合撰文：智能计算的新进展、挑战与未来 | Science合作期刊</a>
     |
-    <a href="https://mp.weixin.qq.com/s/7oqVmYsNpn8OQlvl-UF-9g" target="_blank">《达摩院2023十大科技趋势》发布，生成式AI、多模态预训练大模型入选</a>
+    <a href="https://mp.weixin.qq.com/s/7oqVmYsNpn8OQlvl-UF-9g" target="_blank">《达摩院2023十大科技趋势》发布，生成式AI、多模态预训练大模型入选 <a href="https://files.alicdn.com/tpsservice/9b8b05280c05294f158bdb0dee61f78b.pdf" target="_blank">[Report]</a>
     |              
 </br>
 </br>
