--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -2235,7 +2235,7 @@ Distributional System Field：
     |  
   <br />
   <br />
-SE Field：
+Software Engineering Field：
 <br />
 <!-- Huawei Company -->
     <a href="https://xin-xia.github.io/" target="_blank">Xin Xia</a>
@@ -2266,6 +2266,9 @@ SE Field：
     |
 <!-- Fudan University -->
     <a href="https://cspengxin.github.io/" target="_blank">Xin Peng [<a href="http://codewisdom.net/" target="_blank">CodeWisdom</a>]</a>
+    |
+<!-- East China Normal University -->
+    <a href="https://faculty.ecnu.edu.cn/_s43/zm2_6071/main.psp" target="_blank">Min Zhang</a>
     |
   <br />
   <br />
