--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -2267,6 +2267,12 @@ Software Engineering Field：
 <!-- Fudan University -->
     <a href="https://cspengxin.github.io/" target="_blank">Xin Peng [<a href="http://codewisdom.net/" target="_blank">CodeWisdom</a>]</a>
     |
+<!-- The Chinese University of Hong Kong, Shenzhen -->
+    <a href="https://pinjiahe.github.io/" target="_blank">Pinjia He</a>
+    |
+<!--  The Hong Kong Polytechnic University -->
+    <a href="http://www4.comp.polyu.edu.hk/~csypei/" target="_blank">Max Yu Pei</a>
+    |
 <!-- East China Normal University -->
     <a href="https://faculty.ecnu.edu.cn/_s43/zm2_6071/main.psp" target="_blank">Min Zhang</a>
     |
