--- a/index.html
+++ b/index.html
@@ -206,7 +206,9 @@ Check out Sheng's up-to-date CV for more details.
   |
   <a href="https://earlywarning.fenqubiao.com/#/" target="_blank">《国际期刊预警名单》官方网站</a>  
   <br />
+   <a href="https://mp.weixin.qq.com/s/A7j3g87kwQSgiScMfNg83w" target="_blank">2022工信部重点实验室名单公布！</a> 
+  | 
   <br />
-  
+  <br /> 
 </div></div>
 </body></html>
