--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -249,6 +249,9 @@
     |
     <a href="http://www.ieee-smart-world.org/2022/uic/cfp.php" target="_blank">UIC</a>
     |
+<!-- Recommender Systems -->
+    <a href="https://recsys.acm.org/recsys23/" target="_blank">Recsys</a>
+    |
 <!-- NLP - C-->    
     <a href="" target="_blank">NLPCC</a>
     |
