--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1269,6 +1269,8 @@ AI Big Model:
     |
     <a href="https://mp.weixin.qq.com/s/DISeB5qIeQQiKm-cvyMTeg" target="_blank">当代研究生应当掌握的5种Pytorch并行训练方法（单机多卡）</a>
     |
+    <a href="https://mp.weixin.qq.com/s/DKq9QWdKs_uXHAairdzE_Q" target="_blank">深度学习GPU选购指南：哪款显卡配得上我的炼丹炉？</a>
+    |
 <!--   <br /> -->
 
 <br />
