--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -285,6 +285,9 @@
     <a href="https://www.icwe2023.com/" target="_blank">ICWE</a>
     |
 <!-- others -->
+<!-- Computational Linguistics -->
+    <a href="http://cips-cl.org/static/CCL2023/index.html" target="_blank">CCL</a>
+    |
     <a href="https://www.icwsm.org/2023/index.html/index.html#intro" target="_blank">ICWSM</a>
     |
 <!-- Web-based Learning -->
@@ -303,6 +306,10 @@
     |
 <!--  -->
     <a href="http://www.prai.net/" target="_blank">PRAI</a>
+    |
+    <a href="#" target="_blank">WISE</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/YQZhssg7L8BFKSpl8GKvjg" target="_blank">WISA</a>
     |
     <br/>
     <a href="https://mp.weixin.qq.com/s/XGdXuTeig3RlZJQRItQneQ" target="_blank">从EMNLP 2022速览信息检索领域最新研究进展</a>
