--- a/pages/activities.html
+++ b/pages/activities.html
@@ -67,6 +67,12 @@
     border-left: 5px solid #0084f2;">Program Committee</h3>
 <ul>
 
+    <li><strong>Local chair</strong>, China Conference on Knowledge Graph and Semantic Computing (<a href="#"><strong><u><font color="#874e26">CCKS 2024</font></u></strong></a>), Chongqing, China, xx xx-xx, 2024</li>
+
+
+    <li><strong>Publicity chair</strong>, China Conference on Knowledge Graph and Semantic Computing (<a href="#"><strong><u><font color="#874e26">CCKS 2023</font></u></strong></a>), Shenyang, China, xx xx-xx, 2023</li>
+
+
     <li><strong>PC member</strong>, The 28th International Conference on Database Systems for Advanced Applications (<a href="http://www.tjudb.cn/dasfaa2023/"><strong><u><font color="#874e26">DASFAA 2023</font></u></strong></a>), Tianjin, China, April 17-20, 2023</li>
 
     
