--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1885,6 +1885,9 @@ NLP/KG Field：
     |
     <a href="https://yumeng5.github.io/" target="_blank">Yu Meng</a>
     |
+ <!-- Department of Computer Science at Illinois Institute of Technology -->
+    <a href="http://www.cs.iit.edu/~kshu/" target="_blank">Kai Shu</a>
+    |
 <!-- UC Santa Barbara (UCSB) -->
     <a href="https://jingjingxu.com/#about" target="_blank">Jingjing Xu</a>
     |
