--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -253,7 +253,7 @@
     <a href="https://recsys.acm.org/recsys23/" target="_blank">Recsys</a>
     |
 <!-- NLP - C-->    
-    <a href="" target="_blank">NLPCC</a>
+    <a href="http://tcci.ccf.org.cn/conference/2023/cfp.php" target="_blank">NLPCC</a>
     |
 <!-- data mining - C-->  
     <a href="#" target="_blank">ADMA</a>
@@ -2128,6 +2128,9 @@ Machine Learning Field：
   <br />
 Database Field：
 <br />
+<!-- National University of Singapore (NUS) -->
+    <a href="https://www.comp.nus.edu.sg/~xiaoxk/index.html" target="_blank">Xiaokui Xiao</a>
+    |
     <a href="https://fangyixiang.github.io/index.html" target="_blank">Yixiang Fang</a>
     |
     <a href="https://siqiangluo.wixsite.com/homepage" target="_blank">Siqiang Luo</a>
@@ -2287,6 +2290,9 @@ Software Engineering Field：
     |
 <!--  The Hong Kong Polytechnic University -->
     <a href="http://www4.comp.polyu.edu.hk/~csypei/" target="_blank">Max Yu Pei</a>
+    |
+<!--  Southern University of Science and Technology -->
+    <a href="https://yepangliu.github.io/" target="_blank">Yepang Liu</a>
     |
 <!-- East China Normal University -->
     <a href="https://faculty.ecnu.edu.cn/_s43/zm2_6071/main.psp" target="_blank">Min Zhang</a>
