--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1906,6 +1906,9 @@ NLP/KG Field：
     |
     <a href="https://lingyangchu.github.io/" target="_blank">Lingyang Chu</a> 
     |
+<!-- Aalborg 丹麦 Aalborg University-->
+    <a href="https://www3.ntu.edu.sg/home/arijit.khan/index.html" target="_blank">Arijit</a> 
+    |
 <!-- University of Science and Technology of China (USTC) -->
     <a href="https://miralab.ai/people/jie-wang/" target="_blank">Jie Wang</a>
     |
@@ -2317,6 +2320,16 @@ Neuroscience Field：
     |
     <a href="https://person.zju.edu.cn/htang?ivk_sa=1024320u" target="_blank">Huajin Tang</a>
     |  
+  <br />
+  <br />
+Spiking Neural Networks Field：
+<br />
+<!-- Hong Kong Polytechnic University -->
+    <a href="https://www.polyu.edu.hk/comp/people/academic-staff/prof-tan-kay-chen/" target="_blank">TAN Kay Chen</a>
+    |
+    <a href="https://sites.google.com/view/jibinwu/?pli=1" target="_blank">Jibin Wu</a>
+    |  
+
   <br />
   <br />
 Biochemistry Field：
