--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -213,11 +213,14 @@
     |
     <a href="https://saner2023.must.edu.mo/index" target="_blank">SANER</a>
     |
-    <a href="" target="_blank">ESEM</a>
+    <a href="https://conf.researchr.org/home/esem-2023" target="_blank">ESEM</a>
     |
-<!-- Service Computing -->
+<!-- Service Computing - B-->
     <a href="https://conferences.computer.org/icws/2023/" target="_blank">ICWS</a>
     |
+    <a href="https://iwqos2023.ieee-iwqos.org/" target="_blank">IWQoS</a>
+    |
+<!-- Software Engineering - B --> 
     <a href="" target="_blank">ISSRE</a>
     | 
     <a href="https://conf.researchr.org/home/icpc-2023" target="_blank">ICPC</a>
@@ -345,6 +348,8 @@
     <a href="https://mp.weixin.qq.com/s/CkjTvqk--VN0csltgIUtNQ" target="_blank">9位院士12位专家联合撰文：智能计算的新进展、挑战与未来 | Science合作期刊</a>
     |
     <a href="https://mp.weixin.qq.com/s/7oqVmYsNpn8OQlvl-UF-9g" target="_blank">《达摩院2023十大科技趋势》发布，生成式AI、多模态预训练大模型入选 <a href="https://files.alicdn.com/tpsservice/9b8b05280c05294f158bdb0dee61f78b.pdf" target="_blank">[Report]</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/IZi2eM3PQkTItrJXz9o7Lg" target="_blank">AI终极问题最后一公里——机器意识，UCL汪军教授谈克服深度学习根本性问题</a>
     |              
 </br>
 </br>
@@ -1610,7 +1615,7 @@ AI Big Model:
     <a href="https://www.zhihu.com/question/24366306" target="_blank">国内有哪些自然语言处理的牛人或团队？</a>
 
 <br />
-     <a href="https://github.com/shengyp/top_nlp_teams/tree/gh-pages" target="_blank">顶尖的工业界NLP团队（主要有：达摩院NLP团队）</a> | <a href="https://mp.weixin.qq.com/s/e20lZZQCPVOeA4L5Ta3o7g" target="_blank">国内较强的NLP高校实验室有哪些？</a> | <a href="https://mp.weixin.qq.com/s?__biz=MzU2MjM2OTY2Mw==&mid=2247483746&idx=1&sn=f7a0eff36fccacccd355207b3f9e6453&chksm=fc6bc472cb1c4d64cab93cb5051054e3edba0d33465e2d0cfdcdb7d301eff74a7352da032dc2&token=1702490020&lang=zh_CN#rd" target="_blank">国内外知识图谱相关公司浅析</a> | <a href="https://mp.weixin.qq.com/s/zTn4W2YXIlxCff_Xi5a1JQ" target="_blank">选人工智能最强导师？建议你收藏这份名单</a> | <a href="https://mp.weixin.qq.com/s/Rs2-B6Tq59jr1pSwgXLbcQ" target="_blank">知乎热议！2021大厂AI Lab现状盘点，网友：名存实亡</a> | <a href="https://mp.weixin.qq.com/s/WcRYukvpTz32No8WqLBATA" target="_blank">从Google Scholar看各大科技公司科研水平</a>
+     <a href="https://github.com/shengyp/top_nlp_teams/tree/gh-pages" target="_blank">顶尖的工业界NLP团队（主要有：达摩院NLP团队）</a> | <a href="https://www.zhihu.com/question/19853190" target="_blank">新加坡有哪些大学实验室关注 NLP 和 IR 研究方向？</a> | <a href="https://mp.weixin.qq.com/s/e20lZZQCPVOeA4L5Ta3o7g" target="_blank">国内较强的NLP高校实验室有哪些？</a> | <a href="https://mp.weixin.qq.com/s?__biz=MzU2MjM2OTY2Mw==&mid=2247483746&idx=1&sn=f7a0eff36fccacccd355207b3f9e6453&chksm=fc6bc472cb1c4d64cab93cb5051054e3edba0d33465e2d0cfdcdb7d301eff74a7352da032dc2&token=1702490020&lang=zh_CN#rd" target="_blank">国内外知识图谱相关公司浅析</a> | <a href="https://mp.weixin.qq.com/s/zTn4W2YXIlxCff_Xi5a1JQ" target="_blank">选人工智能最强导师？建议你收藏这份名单</a> | <a href="https://mp.weixin.qq.com/s/Rs2-B6Tq59jr1pSwgXLbcQ" target="_blank">知乎热议！2021大厂AI Lab现状盘点，网友：名存实亡</a> | <a href="https://mp.weixin.qq.com/s/WcRYukvpTz32No8WqLBATA" target="_blank">从Google Scholar看各大科技公司科研水平</a>
 <br />
 <br />
 
@@ -1923,6 +1928,8 @@ NLP/KG Field：
     |
     <a href="https://users.monash.edu/~yli/" target="_blank">Yuanfang Li</a>
     |
+    <a href="https://staff.itee.uq.edu.au/w.hua/" target="_blank">Wen Hua</a>
+    |    
 <!-- Singapore -->
     <a href="https://siqiangluo.wixsite.com/homepage" target="_blank">Siqiang Luo</a>
     |
