--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -2255,6 +2255,9 @@ Distributional System Field：
     | 
     <a href="https://haow.ca/" target="_blank">Yang You [<a href="https://ai.comp.nus.edu.sg/" target="_blank">HPC-AI</a>]</a>
     |
+<!-- The Chinese University of Hong Kong (CUHK)  -->
+    <a href="http://www.cse.cuhk.edu.hk/~jcheng/index.html" target="_blank">James Cheng</a>
+    |
 <!-- Westlake University -->
     <a href="https://tlin-taolin.github.io/" target="_blank">Lin Tao [<a href="https://lins-lab.github.io/" target="_blank">LINs Lab</a>]</a>
     |  
