--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -252,8 +252,11 @@
     |
     <a href="http://www.ieee-smart-world.org/2022/uic/cfp.php" target="_blank">UIC</a>
     |
-<!-- Recommender Systems -->
+<!-- Recommender Systems - B-->
     <a href="https://recsys.acm.org/recsys23/" target="_blank">Recsys</a>
+    |
+<!-- Bioinformatics and Biomedicine - B-->
+    <a href="https://bidma.cpsc.ucalgary.ca/IEEE-BIBM-2023/" target="_blank">BIBM (<a href="#" target="_blank">Download</a>)</a>
     |
 <!-- NLP - C-->    
     <a href="http://tcci.ccf.org.cn/conference/2023/cfp.php" target="_blank">NLPCC</a>
@@ -315,6 +318,8 @@
     <a href="https://mp.weixin.qq.com/s/YQZhssg7L8BFKSpl8GKvjg" target="_blank">WISA</a>
     |
     <br/>
+    <a href="https://mp.weixin.qq.com/s/TDWEGWe1zJrY5af5lIORAw" target="_blank">CCCF精选｜机器学习：从先验假设到自动化——迈向通用人工智能的必然步骤</a>
+    |
     <a href="https://mp.weixin.qq.com/s/XGdXuTeig3RlZJQRItQneQ" target="_blank">从EMNLP 2022速览信息检索领域最新研究进展</a>
     |
     <a href="https://mp.weixin.qq.com/s/uQubfUy7pGMLeCQKgqB6Bw" target="_blank">Gartner发布：2023年十大重要技术趋势</a>
@@ -350,12 +355,20 @@
     <a href="https://mp.weixin.qq.com/s/7oqVmYsNpn8OQlvl-UF-9g" target="_blank">《达摩院2023十大科技趋势》发布，生成式AI、多模态预训练大模型入选 <a href="https://files.alicdn.com/tpsservice/9b8b05280c05294f158bdb0dee61f78b.pdf" target="_blank">[Report]</a>
     |
     <a href="https://mp.weixin.qq.com/s/IZi2eM3PQkTItrJXz9o7Lg" target="_blank">AI终极问题最后一公里——机器意识，UCL汪军教授谈克服深度学习根本性问题</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/7ipLgczRyiji3bU2rYRvhQ" target="_blank">张东晓院士：科学机器学习中的知识嵌入与知识发现</a>
     |              
 </br>
 </br>
 Code Understanding: 
 </br>    
     <a href="https://mp.weixin.qq.com/s/kQ3ARDM06mKnYdzEwuzVLg" target="_blank">代码表征预训练语言模型学习指南：原理、分析和代码</a>
+    |
+</br>
+</br>
+Graph Representation: 
+</br>    
+    <a href="https://mp.weixin.qq.com/s/K6weuCXDk0UUiLi10MJXdw" target="_blank">一文浅谈Graph Transformer领域近期研究进展</a>
     |
 </br>
 </br>
@@ -448,7 +461,7 @@ Code Understanding:
     |
     <a href="https://2022.ieeeicassp.org/call_for_papers.php" target="_blank">ICASSP</a>
     |
-    <a href="https://ieeebibm.org/BIBM2022/" target="_blank">BIBM (<a href="#" target="_blank">Download</a>)</a>
+    <a href="https://ieeebibm.org/BIBM2022/" target="_blank">BIBM (<a href="https://ieeexplore.ieee.org/xpl/conhome/9994793/proceeding" target="_blank">Download</a>)</a>
     |
     <a href="https://2022.naacl.org/calls/tutorials/" target="_blank">NAACL</a>
     |
@@ -757,7 +770,7 @@ AI Big Model:
     |
     <a href="https://www.2021.ieeeicassp.org/2021.ieeeicassp.org/CallForPapers.html" target="_blank">ICASSP</a>
     |
-    <a href="https://ieeebibm.org/BIBM2021/" target="_blank">BIBM (<a href="#" target="_blank">Download</a>)</a>
+    <a href="https://ieeebibm.org/BIBM2021/" target="_blank">BIBM (<a href="https://ieeexplore.ieee.org/xpl/conhome/9669261/proceeding" target="_blank">Download</a>)</a>
     |
     <a href="http://www.acml-conf.org/2021/" target="_blank">ACML</a>
     | 
