--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -2297,6 +2297,9 @@ Software Engineering Field：
     |
     <a href="https://researchers.anu.edu.au/researchers/xing-z" target="_blank">Zhenchang Xing</a>
     |
+<!-- Nanyang Technological University -->
+    <a href="https://wu-yueming.github.io/" target="_blank">Yueming Wu</a>
+    |
 <!-- Macau University of Science and Technology -->
     <a href="https://cszhangtao.github.io/" target="_blank">Tao Zhang</a>
     |
