--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -277,6 +277,8 @@
 <!-- SE - C-->
     <a href="http://ksiresearch.org/seke/seke23.html" target="_blank">SEKE</a>
     |
+    <a href="https://conf.researchr.org/home/ease-2023#:~:text=EASE%20is%20an%20internationally%20leading%20venue%20for%20academics,2023%20and%20hosted%20by%20The%20University%20of%20Oulu." target="_blank">EASE</a>
+    |
     <a href="https://conf.researchr.org/home/internetware-2023" target="_blank">Internetware</a>
     |
 <!-- database - C -->
@@ -2124,6 +2126,10 @@ Human-computer Interaction Field：
   <br />
 Data mining Field：
 <br />
+<!-- The Hong Kong Polytechnic University -->
+    <a href="https://www4.comp.polyu.edu.hk/~jiemshi/" target="_blank">Jieming Shi</a>
+    | 
+<!--  -->
     <a href="https://xiangzhang.info/index.html" target="_blank">Xiang Zhang</a>
     |
     <a href="http://leibai.site/" target="_blank">Lei Bai</a>
