--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -263,7 +263,7 @@
     <a href="http://tcci.ccf.org.cn/conference/2023/cfp.php" target="_blank">NLPCC</a>
     |
 <!-- data mining - C-->  
-    <a href="#" target="_blank">ADMA</a>
+    <a href="https://adma2023.uqcloud.net/index.html" target="_blank">ADMA</a>
     |
 <!-- Neural network - C--> 
     <a href="http://www.iconip2023.org/index.html" target="_blank">ICONIP</a>
@@ -319,6 +319,8 @@
     <a href="#" target="_blank">WISE</a>
     |
     <a href="https://mp.weixin.qq.com/s/YQZhssg7L8BFKSpl8GKvjg" target="_blank">WISA</a>
+    |
+    <a href="https://www.acaitconf.com/singer/438.html" target="_blank">ACAIT</a>
     |
     <br/>
     <a href="https://mp.weixin.qq.com/s/TDWEGWe1zJrY5af5lIORAw" target="_blank">CCCF精选｜机器学习：从先验假设到自动化——迈向通用人工智能的必然步骤</a>
