--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -2204,6 +2204,9 @@ Spatial-Temporal Data Mining Field：
   <br />
 Geographic Information Systems Field：
 <br />
+<!-- Baidu -->
+    <a href="https://zhoujingbo.github.io/" target="_blank">Jingbo Zhou</a>
+    |
     <a href="https://researchers.uq.edu.au/researcher/10854" target="_blank">Hongzhi Yin</a>
     |
     <a href="http://fi.ee.tsinghua.edu.cn/~liyong/" target="_blank">Yong Li</a>
