--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -320,6 +320,9 @@
     |
     <a href="https://mp.weixin.qq.com/s/YQZhssg7L8BFKSpl8GKvjg" target="_blank">WISA</a>
     |
+<!-- Geographic Information Systems -->
+    <a href="https://sigspatial2023.sigspatial.org/" target="_blank">ACM SIGSPATIAL</a>
+    |
     <a href="https://www.acaitconf.com/singer/438.html" target="_blank">ACAIT</a>
     |
     <br/>
@@ -2123,6 +2126,12 @@ Language + Vision Field:
 Human-computer Interaction Field：
 <br />
     <a href="https://pi.cs.tsinghua.edu.cn/people/#faculty" target="_blank">Yuanchun Shi</a>
+    |       
+  <br />
+  <br />
+Brain Computer Interfaces (BCI) Field：
+<br />
+    <a href="https://profiles.uts.edu.au/Chin-Teng.Lin/" target="_blank">CT Lin</a>
     |       
   <br />
   <br />
