--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -265,6 +265,8 @@
 <!-- data mining - C-->  
     <a href="https://adma2023.uqcloud.net/index.html" target="_blank">ADMA</a>
     |
+    <a href="http://www.apweb-waim2023.com/" target="_blank">APWeb-WAIM</a>
+    |
 <!-- Neural network - C--> 
     <a href="http://www.iconip2023.org/index.html" target="_blank">ICONIP</a>
     |
@@ -365,6 +367,8 @@
     <a href="https://mp.weixin.qq.com/s/IZi2eM3PQkTItrJXz9o7Lg" target="_blank">AI终极问题最后一公里——机器意识，UCL汪军教授谈克服深度学习根本性问题</a>
     |
     <a href="https://mp.weixin.qq.com/s/7ipLgczRyiji3bU2rYRvhQ" target="_blank">张东晓院士：科学机器学习中的知识嵌入与知识发现</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/qZkQcoFp8HQR9VDTzPyNbw" target="_blank">ICLR 2023论文接收列表公布，top5%都涉及ICL、扩散模型等方向，引热议</a>
     |              
 </br>
 </br>
