--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -206,6 +206,9 @@
     |
     <a href="#" target="_blank">ICAPS</a>
     |
+<!-- data mining - C-->     
+    <a href="http://www.cloud-conf.net/icdm2023/index.html" target="_blank">ICDM</a>
+    |
 <!-- software engineering - B-->
     <a href="http://www.tjudb.cn/dasfaa2023/" target="_blank">DASFAA</a>
     |
@@ -387,6 +390,16 @@ Graph Representation:
 懂理性的AI Models: 
 </br>    
     <a href="https://mp.weixin.qq.com/s/S77fj9loSKFhHcAiWgxKrg" target="_blank">2023将至，Bengio等大佬年度展望！懂理性的AI模型要来了？</a>
+    |
+</br>
+</br>
+ChatGPT: 
+</br>    
+    <a href="https://mp.weixin.qq.com/s/pqZJr_t2jfA_0KEIcO0wIw" target="_blank">Sam Altman：ChatGPT 不会取代谷歌搜索，但未来的 AI 可能会</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/R0yOPBkRQlNL3VWRirWEkA" target="_blank">吴恩达: ChatGPT大型语言模型获得成功的背后原因探析</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/e4h1pN7T6uBBvzdxf4zfSw" target="_blank">多模态版ChatGPT，拿下视觉语言新SOTA， 代码已开源</a>
     |
 </br>
 </br>
