--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -401,6 +401,9 @@ ChatGPT:
     |
     <a href="https://mp.weixin.qq.com/s/e4h1pN7T6uBBvzdxf4zfSw" target="_blank">多模态版ChatGPT，拿下视觉语言新SOTA， 代码已开源</a>
     |
+    <a href="https://mp.weixin.qq.com/s/IR6uCpit0TpVzDjYz6eTtQ" target="_blank">ChatGPT下的知识图谱审视：一次关于必然影响、未来方向的讨论实录与总结</a>
+    |
+ 
 </br>
 </br>
 <h4>2022</h4>
@@ -2430,6 +2433,12 @@ Image and Graphics Field：
 Fluid-Structure Interaction Field：
 <br />
     <a href="https://www.i4fsi.com/pi-dixia-fan" target="_blank">Dixia Fan [<a href="https://www.i4fsi.com/" target="_blank">i⁴ - FSI Lab</a>]</a>
+    |
+  <br />
+  <br />
+Smart City Field：
+<br />
+    <a href="http://guangwang.me/#/home" target="_blank">Guang Wang</a>
     |
   <br />
   <br />
