--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -403,7 +403,8 @@ ChatGPT:
     |
     <a href="https://mp.weixin.qq.com/s/IR6uCpit0TpVzDjYz6eTtQ" target="_blank">ChatGPT下的知识图谱审视：一次关于必然影响、未来方向的讨论实录与总结</a>
     |
- 
+    <a href="https://mp.weixin.qq.com/s/1mkAlJbtYCmQcz_mV9cdoA" target="_blank">谷歌版ChatGPT首秀，第一个Demo就大翻车，市值暴跌7000亿</a>
+    | 
 </br>
 </br>
 <h4>2022</h4>
@@ -2312,6 +2313,9 @@ Distributional System Field：
 <!-- The Chinese University of Hong Kong (CUHK)  -->
     <a href="http://www.cse.cuhk.edu.hk/~jcheng/index.html" target="_blank">James Cheng</a>
     |
+<!-- The Chinese University of Hong Kong, Shenzhen -->
+    <a href="https://pu-shi.github.io/" target="_blank">Shi Pu</a>
+    | 
 <!-- Westlake University -->
     <a href="https://tlin-taolin.github.io/" target="_blank">Lin Tao [<a href="https://lins-lab.github.io/" target="_blank">LINs Lab</a>]</a>
     |  
