--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -318,6 +318,8 @@
     |
     <a href="#" target="_blank">ChineseCSCW</a>
     |
+    <a href="https://www.akbc.ws/2023/" target="_blank">AKBC</a>
+    |
 <!--  -->
     <a href="http://www.prai.net/" target="_blank">PRAI</a>
     |
@@ -394,7 +396,15 @@ Graph Representation:
 </br>
 </br>
 ChatGPT: 
-</br>    
+</br> 
+    <a href="https://mp.weixin.qq.com/s/Mf4MBpN761M8yI79aaRPeA" target="_blank">ChatGPT保姆级注册教程</a>
+    |
+    <a href="http://www.zztongyun.com/article/%E6%80%8E%E4%B9%88%E5%8A%9E%E7%90%86%E5%9B%BD%E5%A4%96%E7%9A%84%E6%89%8B%E6%9C%BA%E5%8D%A1" target="_blank">一文教你快速注册OpenAi (ChatGPT)，国内也可以！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/q1dgUI-AvTu81e0aFSdLJQ" target="_blank">从爆火的chatGPT讲起: 自然语言生成式AI的前世今生</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/i2uA1k8Go19YDBM94AIxWQ" target="_blank">ChatGPT Prompt工程：设计、实践与思考</a>
+    |    
     <a href="https://mp.weixin.qq.com/s/pqZJr_t2jfA_0KEIcO0wIw" target="_blank">Sam Altman：ChatGPT 不会取代谷歌搜索，但未来的 AI 可能会</a>
     |
     <a href="https://mp.weixin.qq.com/s/R0yOPBkRQlNL3VWRirWEkA" target="_blank">吴恩达: ChatGPT大型语言模型获得成功的背后原因探析</a>
@@ -404,7 +414,32 @@ ChatGPT:
     <a href="https://mp.weixin.qq.com/s/IR6uCpit0TpVzDjYz6eTtQ" target="_blank">ChatGPT下的知识图谱审视：一次关于必然影响、未来方向的讨论实录与总结</a>
     |
     <a href="https://mp.weixin.qq.com/s/1mkAlJbtYCmQcz_mV9cdoA" target="_blank">谷歌版ChatGPT首秀，第一个Demo就大翻车，市值暴跌7000亿</a>
-    | 
+    |
+    <a href="https://mp.weixin.qq.com/s/vhm5tbDPoFN4rcfK3eJxqw" target="_blank">开局打爆谷歌，微软ChatGPT版必应亲测：强到发指！</a>
+    |
+  <!-- 2.7 -->
+    <a href="https://mp.weixin.qq.com/s/oRb-IGKAjVsm5WfpZuj1Kw" target="_blank">ChatGPT爆火，LeCun心态崩了！称大语言模型是邪路，Meta模型3天惨遭下线</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/RQ9k9RTQGKyy6C6k4w58zw" target="_blank">挑战ChatGPT，谷歌正式发布Bard，CEO亲自下场邀请测试</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/e4h1pN7T6uBBvzdxf4zfSw" target="_blank">多模态版ChatGPT，拿下视觉语言新SOTA， 代码已开源</a>
+    |
+  <!-- 2.8 -->
+    <a href="https://mp.weixin.qq.com/s/BzDMHgstOwX9voOYsKmGlg" target="_blank">ChatGPT背后的经济账</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/N9zNwgyfP4wbkhmdcc7N9g" target="_blank">危！ChatGPT一出，这10大职业可能先丢饭碗</a>
+    |
+  <!-- 2.9 -->
+    <a href="https://mp.weixin.qq.com/s/TcV88Wi2J0SmHNoYfYmUaw" target="_blank">谷歌版ChatGPT翻车了！市值暴跌7000亿</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/Ha_VnWA99G6vzz8mkc9UpA" target="_blank">首篇ChatGPT辅助写作的论文，已在arXiv发表！</a>
+    |
+  <!-- 2.11 -->
+    <a href="https://c.m.163.com/news/a/HT8G8Q5D0514R9P4.html?from=wap_redirect&spss=adap_pc&referFrom=&spssid=b47d7dfcb453a07bed6fb92e35d179fc&spsw=2&isFromH5Share=article" target="_blank">《降临》作者特德·姜：ChatGPT是网上所有文本的模糊图像</a>
+    |           
+    <a href="https://mp.weixin.qq.com/s/95yMvBW18fu7WjclTDNAIA" target="_blank">专访之江实验室副主任鲍虎军：ChatGPT凭何搅动人工智能的“一池春水”？</a>
+    |
+
 </br>
 </br>
 <h4>2022</h4>
@@ -575,6 +610,8 @@ ChatGPT:
     |
     <a href="https://conf.scholat.com/home/ccscw/2022" target="_blank">ChineseCSCW</a>
     |
+    <a href="https://www.akbc.ws/2022/" target="_blank">AKBC</a>
+    |
 <!-- Web-based Learning -->
     <a href="https://www.icwl-sete.eu/icwl.html" target="_blank">ICWL</a>
     |
@@ -695,6 +732,9 @@ ChatGPT:
     |
     <a href="https://mp.weixin.qq.com/s/dva18S0eHDUJ1HR7NKk4jg" target="_blank">172篇 | COLING 2022论文集</a>
     |
+    <a href="https://mp.weixin.qq.com/s/B6jLZ6UsVP0Rl49o8y1dWA" target="_blank">Hinton努力推翻自己积累了30年的学术成果，我才知道什么叫生命力！</a>
+    |
+
 </br>
 </br>
 AI Big Model: 
