--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -439,7 +439,11 @@ ChatGPT:
     |           
     <a href="https://mp.weixin.qq.com/s/95yMvBW18fu7WjclTDNAIA" target="_blank">专访之江实验室副主任鲍虎军：ChatGPT凭何搅动人工智能的“一池春水”？</a>
     |
-
+  <!-- 2.12 -->
+    <a href="https://mp.weixin.qq.com/s/zgrJVFvkqG69BrQCky193A" target="_blank">ChatGPT背后模型被证实具有人类心智！斯坦福新研究炸了，知名学者：“这一天终于来了”</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/Q7MxzgY_8nLjhwxGtQwLlg" target="_blank">全面学习 ChatGPT，机器之心准备了 89 篇文章合集</a>
+    |    
 </br>
 </br>
 <h4>2022</h4>
