--- a/pages/activities.html
+++ b/pages/activities.html
@@ -213,6 +213,10 @@
     <li><strong>Invited Reviewer</strong>, Data Intelligence (<a href="https://direct.mit.edu/dint"><strong><u><font color="#874e26">DIM</font></u></strong></a>)</li>
 
 
+<!-- 2023.02.12 收到的审稿邀请 -->
+    <li><strong>Invited Reviewer</strong>, Computational Intelligence and Neuroscience (<a href="https://www.hindawi.com/journals/cin/"><strong><u><font color="#874e26">DIM</font></u></strong></a>)</li>
+
+
     <!-- \item {计算机研究与发展}  -->
     <li><strong>Invited Reviewer</strong>, Journal of Computer Research and Development (<a href="https://crad.ict.ac.cn/CN/1000-1239/home.shtml"><strong><u><font color="#874e26">JCRD</font></u></strong></a>)</li>
 
